--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+	<span id="useFont">Hey! you are not supposed to see this...!!</span>
 	<canvas id="canvas"></canvas>
 	<script type="module" src="/main.js"></script>
 </body>
