compatible on mobile devices

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 </head>
 
 <body>
-	<span id="useFont">Hey! you are not supposed to see this...!!</span>
-	<canvas id="canvas"></canvas>
+	<span id="useFont">Block Game</span>
+	<canvas id="canvas">
+		Update your browser.... For the love of GOD!!!
+	</canvas>
+	<div class="btnContainer">
+		<div>
+			<button class="btn leftBtn">←</button>
+			<button class="btn rightBtn">→</button>
+		</div>
+		<div>
+			<button class="btn upBtn">↑</button>
+		</div>
+	</div>
+
 	<script type="module" src="/main.js"></script>
 </body>
 
